Fix resilience: add isDisconnected in Player